<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/view_holder"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/black"
    android:layout_alignParentTop="true">



    <com.simplemobiletools.camera.views.AutoFitTextureView
        android:id="@+id/camera_texture_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/TopMenu"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal|top">


        <ImageView
            android:id="@+id/toggle_photo_video"
            android:layout_width="@dimen/icon_size"
            android:layout_height="@dimen/icon_size"
            android:layout_below="@+id/settings"
            android:layout_alignParentRight="true"
            android:layout_marginEnd="8dp"
            android:padding="@dimen/normal_margin"
            android:src="@drawable/ic_video"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/toggle_flash"
            app:layout_constraintStart_toEndOf="@+id/change_resolution"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0" />

        <ImageView
            android:id="@+id/change_resolution"
            android:layout_width="@dimen/icon_size"
            android:layout_height="@dimen/icon_size"
            android:layout_below="@+id/toggle_photo_video"
            android:layout_alignParentRight="true"
            android:layout_marginEnd="4dp"
            android:padding="@dimen/normal_margin"
            android:src="@drawable/ic_resolution"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/toggle_photo_video"
            app:layout_constraintStart_toEndOf="@+id/settings"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0" />

        <ImageView
            android:id="@+id/toggle_flash"
            android:layout_width="@dimen/icon_size"
            android:layout_height="@dimen/icon_size"
            android:layout_below="@+id/advanced_camera"
            android:layout_alignParentRight="true"
            android:layout_marginEnd="8dp"
            android:padding="@dimen/medium_margin"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/advanced_camera"
            app:layout_constraintStart_toEndOf="@+id/toggle_photo_video"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0" />

        <ImageView
            android:id="@+id/advanced_camera"
            android:layout_width="@dimen/icon_size"
            android:layout_height="@dimen/icon_size"
            android:layout_below="@+id/change_resolution"
            android:layout_alignParentRight="true"
            android:layout_marginEnd="15dp"
            android:padding="@dimen/medium_margin"
            android:src="@drawable/ic_smart_lens"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="1.0" />

        <ImageView
            android:id="@+id/settings"
            android:layout_width="@dimen/icon_size"
            android:layout_height="@dimen/icon_size"
            android:layout_alignParentRight="true"
            android:layout_marginStart="20dp"
            android:padding="@dimen/normal_margin"
            android:paddingLeft="30dp"
            android:src="@drawable/ic_settings_cog"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/change_resolution"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/smart_hub_scroll"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="25dp"
        android:orientation="horizontal"
        android:visibility="invisible">
    </androidx.recyclerview.widget.RecyclerView>

    <LinearLayout
        android:id="@+id/swipe"
        android:layout_width="450dp"
        android:layout_height="350dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="0dp"
        android:layout_marginBottom="177dp"
        android:layout_weight="1"
        android:gravity="clip_vertical|center_horizontal"
        android:orientation="horizontal"
        android:visibility="visible" />

    <LinearLayout
        android:id="@+id/doubleTap"
        android:layout_width="450dp"
        android:layout_height="150dp"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="527dp"
        android:layout_weight="1"
        android:gravity="clip_vertical|center_horizontal"
        android:orientation="horizontal"
        android:visibility="visible" />

    <LinearLayout
        android:id="@+id/btn_holder"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:gravity="center_horizontal|bottom">

        <ImageView
            android:id="@+id/toggle_camera"
            android:layout_width="@dimen/icon_size"
            android:layout_height="@dimen/icon_size"
            android:layout_weight="1"
            android:padding="@dimen/normal_margin"
            android:src="@drawable/ic_camera_front" />

        <ImageView
            android:id="@+id/shutter"
            android:layout_width="@dimen/icon_size"
            android:layout_height="@dimen/icon_size"
            android:layout_weight="1"
            android:src="@drawable/ic_shutter" />

        <ImageView
            android:id="@+id/last_photo_video_preview"
            android:layout_width="@dimen/icon_size"
            android:layout_height="@dimen/icon_size"
            android:layout_weight="1"
            android:padding="@dimen/normal_margin"
            android:src="@drawable/ic_flash_off" />

    </LinearLayout>

    <TextView
        android:id="@+id/video_rec_curr_timer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/btn_holder"
        android:layout_centerHorizontal="true"
        android:text="00:00"
        android:textColor="@android:color/white"
        android:visibility="gone" />

</RelativeLayout>
