...
            android:paddingLeft="@dimen/normal_margin"
            android:paddingTop="@dimen/activity_margin"
            android:paddingRight="@dimen/normal_margin"
            android:paddingBottom="@dimen/activity_margin">

            <com.simplemobiletools.commons.views.MySwitchCompat
                android:id="@+id/settings_swipe"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@null"
                android:clickable="false"
                android:paddingStart="@dimen/medium_margin"
                android:paddingLeft="@dimen/medium_margin"
...
