<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context=".AddTextFragment">

    <!-- TODO: Update blank fragment layout -->
    <EditText
        android:id="@+id/edt_add_text"
        android:hint="Enter your text"
        android:maxHeight="200dp"
        android:scrollbars="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recycler_font"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp">
    </androidx.recyclerview.widget.RecyclerView>

    <Button
        android:id="@+id/btn_done"
        android:text="Done"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

</LinearLayout>
